force-app/main/default/objects/Site_Record__c/Site_Record__c.object-meta.xml
<CustomObject>
    <label>Site Record</label>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Site Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>