force-app/main/default/objects/Site_Record__c/fields/Excellence_Percentage_Value__c.field-meta.xml
<CustomField>
    <fullName>Excellence_Percentage_Value__c</fullName>
    <formula>IF(ISPICKVAL(Type_of_Indicator__c, &apos;Rate&apos;), SUBSTITUTE($Label.Percent_Format, &apos;{0}&apos;, TEXT(Excellence_Value__c)), TEXT(Excellence_Value__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excellence Percentage Value</label>
    <type>Text</type>
</CustomField>