force-app/main/default/objects/Site_Record__c/fields/Excellence_Value__c.field-meta.xml
<CustomField>
    <fullName>Excellence_Value__c</fullName>
    <label>Excellence Value</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>