force-app/main/default/objects/Site_Record__c/fields/Long_Text__c.field-meta.xml
<CustomField>
    <fullName>Long_Text__c</fullName>
    <label>Long Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>