force-app/main/default/objects/Site_Record__c/fields/Type_of_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Indicator__c</fullName>
    <label>Type of Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rate</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>